# elulib-mobile

./: .gitignore  README.md  package-lock.json  package.json
.github/workflows/: release-build.yaml  release.yaml  test.yaml  tests.yaml
scripts/: sync-version.js
src-tauri/: Cargo.toml  notification-bridge.js  tauri.conf.json
src-tauri/capabilities/: keychain.json
src-tauri/icons/: generate-ios-icons.sh
src-tauri/src/: commands.rs  connectivity.rs  constants.rs  lib.rs  main.rs  notification_bridge.rs
src-tauri/src/notifications/: android.rs  ios.rs  mod.rs
src-tauri/tests/: integration_test.rs  unit_test.rs
src-tauri/tests/common/: mod.rs
