[package]
name = "elulib-mobile"
version = "0.1.0"
description = "Application mobile élulib"
authors = ["élulib"]
license = ""
repository = "https://github.com/elulib/desktop-app"
edition = "2021"

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
tauri = { version = "2.1", features = [] }

[build-dependencies]
tauri-build = { version = "2.1", features = [] }
