[package]
name = "elulib-mobile"
version = "0.1.0"
description = "Application mobile élulib"
authors = ["élulib"]
license = "MIT"
repository = "https://github.com/elulib/desktop-app"
edition = "2021"

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
# All dependencies are required for Tauri framework
tauri = { version = "2.1", features = [] }
thiserror = "1.0"
log = "0.4"
tauri-plugin-log = "2.1"
# Keychain/secure storage plugin for iOS Keychain and Android Keystore
tauri-plugin-keystore = { version = "2.1.0-alpha.1", default-features = false }
# Async runtime for connectivity checks
tokio = { version = "1", features = ["net", "time", "rt"] }

[dev-dependencies]
# Testing dependencies
tokio = { version = "1", features = ["full"] }
mockall = "0.13"
serial_test = "3"
env_logger = "0.11"
tempfile = "3"

# Note: Integration tests are in src-tauri/tests/
# They compile as separate crates and only need public API access

[build-dependencies]
# Required for Tauri build-time code generation
tauri-build = { version = "2.1", features = [] }
